// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`loader > renders active with custom percentage 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="styles__tkulld2"
      role="progressbar"
      style="height: 2rem; width: 2rem;"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#8c40ef"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders active with default percentage 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="styles__tkulld2"
      role="progressbar"
      style="height: 2rem; width: 2rem;"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#8c40ef"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: 2rem; width: 2rem;"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#8c40ef"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with color neutral and primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: 2rem; width: 2rem;"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#e9eaeb"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: 2rem; width: 2rem;"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#8c40ef"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with percentage 75 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      aria-valuetext="75%"
      class="styles__tkulld2"
      role="progressbar"
      style="height: 2rem; width: 2rem;"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#8c40ef"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="65.97344572538566"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with sentiment danger 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: 2rem; width: 2rem;"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#e51963"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: 2rem; width: 2rem;"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#e9eaeb"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with sentiment primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: 2rem; width: 2rem;"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#8c40ef"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with sentiment secondary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: 2rem; width: 2rem;"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#b824f9"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with sentiment success 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: 2rem; width: 2rem;"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#2c8564"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with size large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: 1.5rem; width: 1.5rem;"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#8c40ef"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with size medium 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: 1.25rem; width: 1.25rem;"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#8c40ef"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with size small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: 1rem; width: 1rem;"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#8c40ef"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with size xlarge 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: 2rem; width: 2rem;"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#8c40ef"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with size xsmall 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: 0.75rem; width: 0.75rem;"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#8c40ef"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with size xxlarge 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: 3.5rem; width: 3.5rem;"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#8c40ef"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;
